--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@ body {
 	text-align: center;
 }
 
+.entries {
+	overflow-y: scroll;
+	height: 85vh;
+	padding-right: 10px;
+}
+
 .heading {
 	padding: 10px;
 	text-align: center;
