--- a/css/dark.css
+++ b/css/dark.css
@@ -3,9 +3,13 @@ body {
 	color: #E3E3E3;
 }
 
-.refreshButton {
+.controlButtons {
 	background-color: #484b52;
 	color: #E3E3E3;
+}
+
+.controlButtons-paused {
+	background-color: #A10000;
 }
 
 .table {
