--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,10 @@ body {
 .refreshButtonContainer {
 	padding-bottom: 15px;
 }
+
+.timer {
+	font-family: sans-serif;
+	font-size: 48px;
+	padding: 5px;
+	text-align: center;
+}
