--- a/css/dracula.css
+++ b/css/dracula.css
@@ -1,11 +1,18 @@
+:root {
+	--body-font-color: #73e292;
+	--table-font-color: #d3d3d2;
+	--table-head-background-color: #454861;
+	--table-body-background-color: #686D92;
+}
+
 body {
 	background: #282a38;
-	color: #73e292;
+	color: var(--body-font-color);
 }
 
 .controlButtons {
-	background-color: #686D92;
-	color: #d3d3d2;
+	background-color: var(--table-body-background-color);
+	color: var(--table-font-color);
 }
 
 .controlButtons-paused {
@@ -14,16 +21,16 @@ body {
 }
 
 .table {
-	color: #d3d3d2;
+	color: var(--table-font-color);
 }
 
 .table thead {
-	background: #454861;
-	color: #73e292;
+	background: var(--table-head-background-color);
+	color: var(--body-font-color);;
 }
 
 .table tbody {
-	background: #686D92;
+	background: var(--table-body-background-color);
 }
 
 .timer-paused {
@@ -32,15 +39,15 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #454861; 
+  background: var(--table-head-background-color); 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #686D92; 
+  background: var(--table-body-background-color); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #686D92; 
+  background: var(--table-body-background-color); 
 }
