--- a/css/monokai.css
+++ b/css/monokai.css
@@ -1,11 +1,18 @@
+:root {
+	--body-font-color: #e7b248;
+	--table-font-color: #c9f8c4;
+	--table-head-background-color: #484A3F;
+	--table-body-background-color: #6E7160;
+}
+
 body {
 	background: #282923;
-	color: #e7b248;
+	color: var(--body-font-color);
 }
 
 .controlButtons {
-	background-color: #6E7160;
-	color: #c9f8c4;
+	background-color: var(--table-body-background-color);
+	color: var(--table-font-color);
 }
 
 .controlButtons-paused {
@@ -14,16 +21,16 @@ body {
 }
 
 .table {
-	color: #c9f8c4;
+	color: var(--table-font-color);
 }
 
 .table thead {
-	background: #484A3F;
-	color: #e7b248;
+	background: var(--table-head-background-color);
+	color: var(--body-font-color);
 }
 
 .table tbody {
-	background: #6E7160;
+	background: var(--table-body-background-color);
 }
 
 .timer-paused {
@@ -32,15 +39,15 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #484A3F; 
+  background: var(--table-head-background-color); 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #6E7160; 
+  background: var(--table-body-background-color); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #6E7160; 
+  background: var(--table-body-background-color); 
 }
