--- a/css/dark.css
+++ b/css/dark.css
@@ -17,7 +17,11 @@ body {
 
 .controlButtons-paused {
 	background-color: #A10000;
-	color: #E3E3E3;
+	color: var(--item-stat-font-color);
+}
+
+.itemStat {
+	color: var(--table-font-color);
 }
 
 .table {
