--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 
 .chartHeading {
 	text-align: center;
+	padding-top: 15px;
 }
 
 .charts {
@@ -29,6 +30,19 @@ body {
 
 .refreshButtonContainer {
 	padding-bottom: 15px;
+}
+
+.statsContainer {
+	padding-top: 30px;
+	text-align: center;
+}
+
+.statsContainer h4 {
+	font-size: 26px;
+}
+
+.statsContainer p {
+	font-size: 18px;
 }
 
 .timer {
@@ -56,54 +70,4 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   border-radius: 50px; 
-}
-
-
-
-/*Default Colors*/
-body {
-	background: #2f3136;
-	color: #E3E3E3;
-}
-
-.controlButtons {
-	background-color: #484b52;
-	color: #E3E3E3;
-}
-
-.controlButtons-paused {
-	background-color: #A10000;
-	color: #E3E3E3;
-}
-
-.table {
-	color: #E3E3E3;
-}
-
-.table thead {
-	background: #3F4144;
-	color: white;
-}
-
-.table tbody {
-	background: #484b52;
-}
-
-.timer-paused {
-	color: #BB6464;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #3F4144; 
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #484b52; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #484b52; 
 }
