--- a/css/light.css
+++ b/css/light.css
@@ -41,6 +41,10 @@ body {
 	color: #D47171;
 }
 
+.statsContainerItem {
+	background-color: var(--table-body-background-color);
+}
+
 /* Track */
 ::-webkit-scrollbar-track {
   background: var(--table-head-background-color); 
