--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ body {
 	text-align: center;
 }
 
+/* Scrollbars */
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -64,7 +65,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  
+
 }
 
 /* Handle */
@@ -74,5 +75,48 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  border-radius: 50px; 
+  border-radius: 50px;
+}
+
+/* Snackbar */
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+	background-color: var(--table-head-background-color);
+  color: var(--body-font-color);
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
 }
