--- a/css/monokai.css
+++ b/css/monokai.css
@@ -1,61 +1,8 @@
 :root {
+	--body-background-color: #282923;
 	--body-font-color: #e7b248;
 	--table-font-color: #c9f8c4;
 	--table-head-background-color: #484A3F;
 	--table-body-background-color: #6E7160;
-}
-
-body {
-	background: #282923;
-	color: var(--body-font-color);
-}
-
-.controlButtons {
-	background-color: var(--table-body-background-color);
-	color: var(--table-font-color);
-}
-
-.controlButtons-paused {
-	background-color: #ae2824;
-	color: #E3E3E3;
-}
-
-.itemStat {
-	color: var(--table-font-color);
-}
-
-.table {
-	color: var(--table-font-color);
-}
-
-.table thead {
-	background: var(--table-head-background-color);
-	color: var(--body-font-color);
-}
-
-.table tbody {
-	background: var(--table-body-background-color);
-}
-
-.timer-paused {
-	color: #BB6464;
-}
-
-.statsContainerItem {
-	background-color: var(--table-body-background-color);
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--table-head-background-color);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--table-body-background-color);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--table-body-background-color);
+	--paused-color: #ae2824;
 }
