--- a/css/thanos.css
+++ b/css/thanos.css
@@ -1,61 +1,8 @@
 :root {
+	--body-background-color: #12E772;
 	--body-font-color: #266EF6;
 	--table-font-color: #FF8B00;
 	--table-head-background-color: #FF8B00;
 	--table-body-background-color: #FFD300;
-}
-
-body {
-	background: #12E772;
-	color: var(--body-font-color);
-}
-
-.controlButtons {
-	background-color: var(--table-body-background-color);
-	color: var(--table-font-color);
-}
-
-.controlButtons-paused {
-	background-color: #FF0130;
-	color: var(--item-stat-font-color);
-}
-
-.itemStat {
-	color: var(--table-font-color);
-}
-
-.table {
-	color: var(--table-font-color);
-}
-
-.table thead {
-	background: var(--table-head-background-color);
-	color: var(--body-font-color);
-}
-
-.table tbody {
-	background: var(--table-body-background-color);
-}
-
-.timer-paused {
-	color: #BB6464;
-}
-
-.statsContainerItem {
-	background-color: var(--table-body-background-color);
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--table-head-background-color);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--table-body-background-color);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--table-body-background-color);
+	--paused-color: #FF0130;
 }
