--- a/css/blackout.css
+++ b/css/blackout.css
@@ -1,61 +1,8 @@
 :root {
+	--body-background-color: #030303;
 	--body-font-color: #dddbd7;
 	--table-font-color: #dddbd7;
 	--table-head-background-color: #18191d;
 	--table-body-background-color: #22262e;
-}
-
-body {
-	background: #030303;
-	color: var(--body-font-color);
-}
-
-.controlButtons {
-	background-color: var(--table-body-background-color);
-	color: var(--table-font-color);
-}
-
-.controlButtons-paused {
-	background-color: #A10000;
-	color: var(--item-stat-font-color);
-}
-
-.itemStat {
-	color: var(--table-font-color);
-}
-
-.table {
-	color: var(--table-font-color);
-}
-
-.table thead {
-	background: var(--table-head-background-color);
-	color: var(--body-font-color);
-}
-
-.table tbody {
-	background: var(--table-body-background-color);
-}
-
-.timer-paused {
-	color: #BB6464;
-}
-
-.statsContainerItem {
-	background-color: var(--table-body-background-color);
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--table-head-background-color); 
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--table-body-background-color); 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--table-body-background-color); 
+	--paused-color: #BB6464;
 }
