--- a/src/css/main.css
+++ b/src/css/main.css
@@ -131,6 +131,12 @@ body {
   font-size: 17px;
 }
 
+/* Signin Menu */
+.signin-form {
+	align-items: center;
+	margin-bottom: 10px;
+}
+
 #snackbar.show {
   visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
