--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,13 +17,27 @@ body {
 
 .controlButtons {
 	width: 100%;
-	background-color: var(--table-body-background-color);
+	font-size: 28px;
+	background-color: transparent;
+	border-color: transparent;
 	color: var(--table-font-color);
 }
 
+.controlButtons:hover {
+	filter: brightness(75%);
+}
+
+.controlButtons:active {
+	transform: translateY(4px);
+}
+
+.controlButtons:focus {
+	outline: none;
+}
+
 .controlButtons-paused {
-	background-color: var(--paused-color);
-	color: var(--item-stat-font-color);
+	/* background-color: var(--paused-color); */
+	color: var(--paused-color);
 }
 
 .entries {
@@ -67,6 +81,12 @@ body {
 
 /* Stats */
 .itemStat {
+	color: var(--table-font-color);
+}
+
+.statsButtons {
+	width: 100%;
+	background-color: var(--table-body-background-color);
 	color: var(--table-font-color);
 }
 
@@ -134,7 +154,8 @@ body {
   min-width: 250px;
   margin-left: -125px;
 	background-color: var(--table-head-background-color);
-  color: var(--body-font-color);
+	color: var(--body-font-color);
+	border: 0.5px solid var(--body-font-color);
   text-align: center;
   border-radius: 2px;
   padding: 16px;
@@ -142,13 +163,77 @@ body {
   z-index: 1;
   left: 50%;
   bottom: 30px;
-  font-size: 17px;
+	font-size: 17px;
+	box-shadow: 0 0 10px black;
 }
 
 #snackbar.show {
   visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Tooltips */
+	/* Tooltip Defaults */
+.ctooltip {
+	position: relative;
+	display: inline-block;
+}
+
+.ctooltip .ctooltiptext {
+	visibility: hidden;
+	width: 120px;
+  background-color: var(--table-head-background-color);
+	color: var(--body-font-color);
+	border: 1px solid var(--body-font-color);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+	z-index: 1;
+	box-shadow: 0 0 10px black;
+}
+
+.ctooltip .ctooltiptext::after {
+  content: " ";
+  position: absolute;
+  border-width: 5px;
+	border-style: solid;
+}
+
+.ctooltip:hover .ctooltiptext {
+  visibility: visible;
+}
+
+	/* Tooltip Bottom */
+.ctooltip-bottom .ctooltiptext-bottom {
+  top: 115%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.ctooltip-bottom .ctooltiptext-bottom::after {
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-color: transparent transparent var(--body-font-color) transparent;
+}
+
+.ctooltip:hover .ctooltiptext {
+  visibility: visible;
+}
+
+	/* Tooltip - Left */
+.ctooltip-left .ctooltiptext-left {
+  top: 5px;
+  right: 95%;
+}
+
+.ctooltip-left .ctooltiptext-left::after {
+  top: 50%;
+  left: 100%;
+  margin-top: -5px;
+  border-color: transparent transparent transparent var(--body-font-color);
 }
 
 /* Signin Menu */
