--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,8 @@ body {
 .controlButtons {
 	width: 100%;
 	font-size: 28px;
+	padding: 0;
+	border: 0;
 	background-color: transparent;
 	border-color: transparent;
 	color: var(--table-font-color);
@@ -91,16 +93,17 @@ body {
 
 /* Stats */
 .backButton {
+	width: 28px;
+	font-size: 28px;
 	position: absolute;
 	top: 10px;
-	left: 10px;
-	height: 40px;
-	width: 40px;
-	font-size: 20px;
+	left: 15px;
 	text-align: center;
 	vertical-align: middle;
-	background-color: var(--table-body-background-color);
-	color: var(--table-font-color);
+}
+
+.backButton:focus {
+	outline: none;
 }
 
 .itemStat {
