Fixed Dracula pause color

--- a/src/css/dracula.css
+++ b/src/css/dracula.css
@@ -4,5 +4,5 @@
 	--table-font-color: #d3d3d2;
 	--table-head-background-color: #454861;
 	--table-body-background-color: #686D92;
-	--paused-color: #E3E3E3;
+	--paused-color: #bb6464;
 }
